# The-online-DDZ

Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-a4ce5deb0238ba566cfc.json  cmakeFiles-v1-84ad4661f4476a6365ee.json  codemodel-v2-7c9bea3a9e4c978c8586.json  index-2025-01-17T06-33-01-0572.json  target-card-Debug-e3446315abc43efe7231.json  target-card_autogen-Debug-4fcaa5bfae649e55e779.json  target-control-Debug-36e9588819f7bfe89ee2.json  target-control_autogen-Debug-bb1b602e8f318926ab29.json  target-ddz-network-client-Debug-2ebdb95a36ccb28a4172.json  target-ddz-network-client_autogen-Debug-96225b0a9acd87545b95.json  target-player-Debug-805f97f2732ac64a1a61.json  target-player_autogen-Debug-a30dd3ed520e6a57623f.json  target-strategy-Debug-1ce373ca0e391e0b1057.json  target-strategy_autogen-Debug-14e2a88e94468600c45a.json  target-thread-Debug-e87cdc0bad2abedff580.json  target-thread_autogen-Debug-1489277f0516c76a3af2.json  target-windows-Debug-a53ba8db7473a74b53ad.json  target-windows_autogen-Debug-e75eb52be7e31bdc1ad9.json
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/card/: Makefile  cmake_install.cmake
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/control/: Makefile  cmake_install.cmake
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/control/control_autogen/EWIEGA46WW/: moc_bgmcontrol.cpp  moc_gamecontrol.cpp
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/ddz-network-client_autogen/: moc_predefs.h
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/player/: Makefile  cmake_install.cmake
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/player/player_autogen/EWIEGA46WW/: moc_player.cpp  moc_robot.cpp  moc_userplayer.cpp
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/strategy/: Makefile  cmake_install.cmake
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/thread/: Makefile  cmake_install.cmake
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/thread/thread_autogen/: mocs_compilation.cpp
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/thread/thread_autogen/EWIEGA46WW/: moc_robotgraplord.cpp  moc_robotplayhand.cpp
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/windows/: Makefile  cmake_install.cmake
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/windows/windows_autogen/: mocs_compilation.cpp
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/windows/windows_autogen/EWIEGA46WW/: moc_animationwindow.cpp  moc_buttongroup.cpp  moc_cardpanel.cpp  moc_countdown.cpp  moc_endingpanel.cpp  moc_gamepanel.cpp  moc_loading.cpp  moc_mybutton.cpp  moc_scorepanel.cpp
Client/build-ddz-network-client-Desktop_Qt_5_12_10_MinGW_64_bit-Debug/windows/windows_autogen/include/: ui_buttongroup.h  ui_gamepanel.h  ui_scorepanel.h
Client/ddz-network-client/: CMakeLists.txt  main.cpp
Client/ddz-network-client/card/: CMakeLists.txt  cards.cpp  cards.h
Client/ddz-network-client/control/: CMakeLists.txt  datamanager.cpp  datamanager.h  gamecontrol.cpp  gamecontrol.h
Client/ddz-network-client/crypto/: CMakeLists.txt
Client/ddz-network-client/player/: CMakeLists.txt  robot.cpp
Client/ddz-network-client/serialize/: CMakeLists.txt  codec.cpp  codec.h  information.pb.cc  information.pb.h  information.proto
Client/ddz-network-client/strategy/: CMakeLists.txt
Client/ddz-network-client/tcp/: CMakeLists.txt  tcpsocket.cpp  tcpsocket.h
Client/ddz-network-client/thread/: CMakeLists.txt  communication.cpp  communication.h  robotgraplord.cpp  robotplayhand.cpp
Client/ddz-network-client/windows/: CMakeLists.txt  gamemode.cpp  gamemode.ui  gamepanel.cpp  gamepanel.h  joinroom.cpp  joinroom.h  joinroom.ui  login.cpp  login.h  login.ui  scorepanel.h  scorepanel.ui
Server/: CMakeLists.txt  main.cpp  reactor_http_cpp.vcxproj
Server/Crypto/: AesCropto.cpp  AesCropto.h  Base64.cpp  Base64.h  CMakeLists.txt  Hash.cpp  Hash.h  RsaCrypto.cpp  RsaCrypto.h
Server/common/: Buffer.cpp  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  JsonParse.cpp  JsonParse.h
Server/config/: config.json
Server/game/: CMakeLists.txt  Communication.cpp  Communication.h  Room.cpp  Room.h  RoomList.cpp  RoomList.h
Server/http/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
Server/reactor/: CMakeLists.txt  Dispatcher.h  EventLoop.cpp  EventLoop.h  PollDispatcher.cpp  SelectDispatcher.cpp
Server/serialize/: CMakeLists.txt  Codec.cpp  Codec.h  information.pb.cc  information.pb.h  information.proto
Server/tcp/: CMakeLists.txt  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
Server/test/: CMakeLists.txt  MyTest.cpp  MyTest.h  address.pb.cc  address.pb.h  address.proto  person.pb.cc  person.pb.h  person.proto
Server/thread/: CMakeLists.txt  ThreadPool.h  WorkerThread.cpp  WorkerThread.h
